--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <title>Rob's Garage</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Bree+Serif" rel="stylesheet">
 
 
 
@@ -16,10 +17,10 @@
 <body class="body">
   <app-root></app-root>
 
- 
-  
-  
-  
+
+
+
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
