--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <title>Rob's Garage</title>
   <base href="/">
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Bree+Serif|Tinos|Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif|Bree+Serif|Tinos|Roboto+Slab|Merriweather" rel="stylesheet">
 
 
 
