--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <title>Rob's Garage</title>
+  <title>Garage App</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=PT+Serif|Bree+Serif|Tinos|Roboto+Slab|Merriweather" rel="stylesheet">
 
@@ -26,4 +26,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 </body>
 
-</html> 
+</html>
